--- a/app/src/main/res/layout/oldgames_fragment.xml
+++ b/app/src/main/res/layout/oldgames_fragment.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".app.old_games.OldGamesFragment">
 
     <android.support.design.widget.AppBarLayout
@@ -14,23 +15,23 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbarOldGames"
-            app:title="@string/old_games"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:background="@color/colorPrimary"
             android:elevation="@dimen/toolbar_elevation"
-            app:layout_scrollFlags="scroll|enterAlways"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            tools:ignore="UnusedAttribute" />
+            app:title="@string/old_games"
+            tools:ignore="UnusedAttribute"/>
 
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayoutOldGames"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -43,8 +44,8 @@
                 android:layout_height="match_parent"
                 android:background="@color/whiteDark"
                 android:scrollbarStyle="insideOverlay"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:scrollbars="vertical"/>
+                android:scrollbars="vertical"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
             <LinearLayout
                 android:id="@+id/emptyLayoutOldGames"
