new game made activity and create players changed to toolbar

--- a/app/src/main/res/layout/newgame_activity.xml
+++ b/app/src/main/res/layout/newgame_activity.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="@android:color/white"
-    tools:context=".app.new_game.NewGameFragment">
+    tools:context=".app.new_game.NewGameActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarNewGame"
@@ -35,16 +35,6 @@
         app:hint="@string/enter_a_name"
         app:maxRows="3"
         app:showChipDetailed="false"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabNewGameCreatePlayer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="@dimen/standard_margin"
-        android:src="@drawable/ic_add_white"
-        android:tint="@android:color/white"
-        android:visibility="visible"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabNewGameStartGame"
