--- a/app/src/main/res/layout/oldgames_fragment.xml
+++ b/app/src/main/res/layout/oldgames_fragment.xml
@@ -111,6 +111,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/standard_margin"
-        android:src="@drawable/ic_add_white"/>
+        android:src="@drawable/ic_add_white_24dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
