--- a/app/src/main/res/layout/combinations_activity.xml
+++ b/app/src/main/res/layout/combinations_activity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".app.combinations.CombinationsFragment">
+    tools:context=".app.combinations.CombinationsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
