--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,5 +16,6 @@
     <!-- OLD GAMES -->
     <dimen name="cardCornerRadius">2dp</dimen>
     <dimen name="cardview_oldgame_height">256dp</dimen>
+    <dimen name="combination_item_height">64dp</dimen>
 
 </resources>
