filtrado y animaciones terminadas

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,5 +20,6 @@
     <dimen name="combination_item_height">80dp</dimen>
     <dimen name="combination_item_image_height">32dp</dimen>
     <dimen name="quadruple_standard_margin">64dp</dimen>
+    <dimen name="combination_item_cardview_min_height">52dp</dimen>
 
 </resources>
