--- a/app/src/main/res/layout/combinations_activity.xml
+++ b/app/src/main/res/layout/combinations_activity.xml
@@ -16,6 +16,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbarCombinations"
             android:layout_width="match_parent"
+            android:animateLayoutChanges="true"
             android:layout_height="?android:attr/actionBarSize"
             android:background="@color/colorPrimary"
             android:elevation="@dimen/toolbar_elevation"
