--- a/app/src/main/res/menu/combinations_menu.xml
+++ b/app/src/main/res/menu/combinations_menu.xml
@@ -8,4 +8,11 @@
         android:title="@string/search"
         app:showAsAction="always"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
+
+    <item
+        android:id="@+id/action_toggle_combination_exnplanation"
+        android:icon="@drawable/ic_library_books_white_24dp"
+        android:title="@string/toggle_descriptions"
+        app:showAsAction="ifRoom"/>
+
 </menu>
