send email ok go to rate ok go to ema green book ok

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,5 +21,6 @@
     <dimen name="combination_item_image_height">32dp</dimen>
     <dimen name="quadruple_standard_margin">64dp</dimen>
     <dimen name="combination_item_cardview_min_height">52dp</dimen>
+    <dimen name="combination_item_cardview_full_height">112dp</dimen>
 
 </resources>
