--- a/app/src/main/res/layout/combination_item.xml
+++ b/app/src/main/res/layout/combination_item.xml
@@ -43,7 +43,8 @@
                 <TextView
                     android:id="@+id/tvCombinationItemPoints"
                     android:layout_width="@dimen/double_standard_margin"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:textColor="@android:color/black"
                     tools:text="88"/>
@@ -51,10 +52,11 @@
                 <TextView
                     android:id="@+id/tvCombinationItemName"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:lines="1"
                     android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:lines="1"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:textColor="@android:color/black"
                     android:textStyle="bold"
@@ -76,12 +78,12 @@
             <FrameLayout
                 android:id="@+id/flCombinationItemImageOrDescriptionContainer"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/triple_standard_margin"
+                android:layout_height="56dp"
+                android:paddingBottom="@dimen/half_standard_margin"
                 android:layout_marginEnd="@dimen/standard_margin"
                 android:layout_marginLeft="@dimen/standard_margin"
                 android:layout_marginRight="@dimen/standard_margin"
-                android:layout_marginStart="@dimen/standard_margin"
-                android:layout_marginBottom="@dimen/half_standard_margin">
+                android:layout_marginStart="@dimen/standard_margin">
 
                 <ImageView
                     android:id="@+id/ivCombinationItemImage"
