--- a/app/src/main/res/layout/combination_item.xml
+++ b/app/src/main/res/layout/combination_item.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:animateLayoutChanges="true"
     android:background="@color/grayLight">
 
     <android.support.v7.widget.CardView
@@ -12,12 +11,12 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/quarter_standard_margin"
         android:layout_marginBottom="@dimen/quarter_standard_margin"
         android:layout_marginEnd="@dimen/half_standard_margin"
         android:layout_marginLeft="@dimen/half_standard_margin"
         android:layout_marginRight="@dimen/half_standard_margin"
         android:layout_marginStart="@dimen/half_standard_margin"
-        android:layout_marginTop="@dimen/quarter_standard_margin"
         android:minHeight="@dimen/combination_item_cardview_min_height"
         card_view:cardBackgroundColor="@android:color/white"
         card_view:cardCornerRadius="@dimen/cardCornerRadius">
@@ -25,14 +24,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/half_standard_margin"
             android:background="@android:color/white"
+            android:paddingBottom="@dimen/half_standard_margin"
+            android:paddingTop="@dimen/half_standard_margin"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/double_standard_margin"
-                android:layout_marginBottom="@dimen/half_standard_margin"
+                android:layout_height="32dp"
                 android:layout_marginEnd="@dimen/standard_margin"
                 android:layout_marginLeft="@dimen/standard_margin"
                 android:layout_marginRight="@dimen/standard_margin"
@@ -78,12 +77,13 @@
             <FrameLayout
                 android:id="@+id/flCombinationItemImageOrDescriptionContainer"
                 android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:paddingBottom="@dimen/half_standard_margin"
+                android:layout_marginTop="@dimen/half_standard_margin"
+                android:layout_height="36dp"
                 android:layout_marginEnd="@dimen/standard_margin"
                 android:layout_marginLeft="@dimen/standard_margin"
                 android:layout_marginRight="@dimen/standard_margin"
-                android:layout_marginStart="@dimen/standard_margin">
+                android:layout_marginStart="@dimen/standard_margin"
+                tools:visibility="gone">
 
                 <ImageView
                     android:id="@+id/ivCombinationItemImage"
