--- a/app/src/main/res/layout/combinations_activity.xml
+++ b/app/src/main/res/layout/combinations_activity.xml
@@ -35,6 +35,8 @@
         android:background="@color/whiteDark"
         android:scrollbarStyle="insideOverlay"
         android:scrollbars="vertical"
+        android:paddingTop="@dimen/quarter_standard_margin"
+        android:paddingBottom="@dimen/quarter_standard_margin"
         android:visibility="visible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
