--- a/app/src/main/res/layout/combination_item.xml
+++ b/app/src/main/res/layout/combination_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/llCombinationItemContainer"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,12 +12,12 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/quarter_standard_margin"
         android:layout_marginBottom="@dimen/quarter_standard_margin"
         android:layout_marginEnd="@dimen/half_standard_margin"
         android:layout_marginLeft="@dimen/half_standard_margin"
         android:layout_marginRight="@dimen/half_standard_margin"
         android:layout_marginStart="@dimen/half_standard_margin"
+        android:layout_marginTop="@dimen/quarter_standard_margin"
         android:minHeight="@dimen/combination_item_cardview_min_height"
         card_view:cardBackgroundColor="@android:color/white"
         card_view:cardCornerRadius="@dimen/cardCornerRadius">
@@ -25,9 +26,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
+            android:orientation="vertical"
             android:paddingBottom="@dimen/half_standard_margin"
-            android:paddingTop="@dimen/half_standard_margin"
-            android:orientation="vertical">
+            android:paddingTop="@dimen/half_standard_margin">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -77,12 +78,13 @@
             <FrameLayout
                 android:id="@+id/flCombinationItemImageOrDescriptionContainer"
                 android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/half_standard_margin"
                 android:layout_height="36dp"
                 android:layout_marginEnd="@dimen/standard_margin"
                 android:layout_marginLeft="@dimen/standard_margin"
                 android:layout_marginRight="@dimen/standard_margin"
                 android:layout_marginStart="@dimen/standard_margin"
+                android:layout_marginTop="@dimen/half_standard_margin"
+                android:visibility="gone"
                 tools:visibility="gone">
 
                 <ImageView
