--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -23,6 +23,8 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/main_drawer_header"
         app:itemBackground="@android:color/transparent"
+        app:itemTextColor="@color/grayMM"
+        app:itemIconTint="@color/grayMM"
         app:menu="@menu/drawer_menu"/>
 
 </android.support.v4.widget.DrawerLayout>
