--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="standard_margin">16dp</dimen>
     <dimen name="double_standard_margin">32dp</dimen>
     <dimen name="triple_standard_margin">48dp</dimen>
+    <dimen name="quadruple_standard_margin">64dp</dimen>
 
     <!-- TOOLBAR-->
     <dimen name="toolbar_elevation">4dp</dimen>
@@ -17,10 +18,14 @@
     <!-- OLD GAMES -->
     <dimen name="cardCornerRadius">4dp</dimen>
     <dimen name="cardview_oldgame_height">256dp</dimen>
+
+    <!-- COMBINATIONS -->
     <dimen name="combination_item_height">80dp</dimen>
     <dimen name="combination_item_image_height">32dp</dimen>
-    <dimen name="quadruple_standard_margin">64dp</dimen>
     <dimen name="combination_item_cardview_min_height">48dp</dimen>
     <dimen name="combination_item_cardview_full_height">92dp</dimen>
+
+    <!-- GAME -->
+    <dimen name="bottom_navigation_menu_height">56dp</dimen>
 
 </resources>
