--- a/app/src/main/res/layout/oldgame_item.xml
+++ b/app/src/main/res/layout/oldgame_item.xml
@@ -79,8 +79,7 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/standard_margin">
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:id="@+id/tvOlgGameItemPlayerEastName"
@@ -128,7 +127,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/half_standard_margin"
                             android:layout_marginRight="@dimen/half_standard_margin"
-                            android:layout_marginTop="@dimen/standard_margin"
                             android:layout_weight="1">
 
                             <TextView
@@ -170,7 +168,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/half_standard_margin"
                             android:layout_marginStart="@dimen/half_standard_margin"
-                            android:layout_marginTop="@dimen/standard_margin"
                             android:layout_weight="1">
 
                             <TextView
@@ -264,9 +261,8 @@
 
                     <LinearLayout
                         android:id="@+id/llOldGameItemItemRoundsNumber"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/standard_margin"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -292,8 +288,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/standard_margin"
                         android:gravity="center"
-                        android:orientation="vertical"
-                        tools:visibility="visible">
+                        tools:visibility="gone"
+                        android:orientation="vertical">
 
                         <TextView
                             android:layout_width="wrap_content"
