--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".app.main.MainActivity"
+    tools:context=".app.main.activity.MainActivity"
     tools:openDrawer="start">
 
     <FrameLayout
