--- a/app/src/main/res/layout/oldgames_fragment.xml
+++ b/app/src/main/res/layout/oldgames_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".app.old_games.OldGamesFragment">
+    tools:context=".app.main.old_games.OldGamesFragment">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
