fixed combinations rx included room improved

--- a/app/src/main/res/layout/newgame_activity.xml
+++ b/app/src/main/res/layout/newgame_activity.xml
@@ -36,7 +36,7 @@
         app:maxRows="3"
         app:showChipDetailed="false"/>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.github.clans.fab.FloatingActionButton
         android:id="@+id/fabNewGameStartGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
