--- a/app/src/main/res/layout/combination_item.xml
+++ b/app/src/main/res/layout/combination_item.xml
@@ -28,7 +28,8 @@
             android:background="@android:color/white"
             android:orientation="vertical"
             android:paddingBottom="@dimen/half_standard_margin"
-            android:paddingTop="@dimen/half_standard_margin">
+            android:paddingTop="@dimen/half_standard_margin"
+            android:animateLayoutChanges="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
