--- a/app/src/main/res/layout/newgame_activity.xml
+++ b/app/src/main/res/layout/newgame_activity.xml
@@ -47,4 +47,22 @@
         android:visibility="gone"
         app:fabSize="normal"/>
 
+    <LinearLayout
+        android:id="@+id/llProgress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="@color/grayMMTransparent"
+        android:gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="TODO" />
+
+    </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
