--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!-- DIALOG -->
+    <style name="AlertDialogStyleMM" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColorPrimary">@color/grayMM</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
     <!-- GAME RANKING DIALOG -->
     <style name="trDialogRanking">
         <item name="android:layout_width">match_parent</item>
