--- a/app/src/main/res/layout/oldgames_fragment.xml
+++ b/app/src/main/res/layout/oldgames_fragment.xml
@@ -106,12 +106,13 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.github.clans.fab.FloatingActionButton
         android:id="@+id/fabOldGames"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:fab_colorNormal="@color/colorAccent"
         android:layout_gravity="end|bottom"
-        android:layout_margin="@dimen/standard_margin"
+        android:layout_margin="@dimen/double_standard_margin"
         android:src="@drawable/ic_add_white_24dp"
         android:visibility="gone"
         tools:visibility="visible"/>
