--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,5 +29,7 @@
     <dimen name="bottom_navigation_menu_height">56dp</dimen>
     <dimen name="quintuple_margin">80dp</dimen>
     <dimen name="table_player_points_text_size">36sp</dimen>
+    <dimen name="table_player_name_text_size">32sp</dimen>
+    <dimen name="table_player_penalty_points_text_size">20sp</dimen>
 
 </resources>
