--- a/app/src/main/res/layout/game_table_fragment.xml
+++ b/app/src/main/res/layout/game_table_fragment.xml
@@ -8,50 +8,77 @@
 
     <View
         android:id="@+id/centerAnchor"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/half_standard_margin"
+        android:layout_height="@dimen/half_standard_margin"
         android:layout_centerInParent="true" />
 
-    <fragment
-        android:id="@+id/fGameTableSeatEast"
-        android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatEastFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/centerAnchor"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <fragment
-        android:id="@+id/fGameTableSeatSouth"
-        android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatSouthFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/centerAnchor"
-        android:layout_toLeftOf="@+id/centerAnchor"
-        android:rotation="90" />
-
-    <fragment
-        android:id="@+id/fGameTableSeatWest"
-        android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatWestFragment"
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/centerAnchor"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:rotation="0">
 
-    <fragment
-        android:id="@+id/fGameTableSeatNorth"
-        android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatNorthFragment"
+        <fragment
+            android:id="@+id/fGameTableSeatEast"
+            android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
+
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/centerAnchor"
-        android:layout_toRightOf="@+id/centerAnchor" />
+        android:layout_toRightOf="@+id/centerAnchor"
+        android:rotation="-90">
+
+        <fragment
+            android:id="@+id/fGameTableSeatSouth"
+            android:layout_gravity="center_horizontal"
+            android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/centerAnchor"
+        android:layout_centerHorizontal="true"
+        android:rotation="180">
+
+        <fragment
+            android:id="@+id/fGameTableSeatWest"
+            android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@+id/centerAnchor"
+        android:layout_toLeftOf="@+id/centerAnchor"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:rotation="90">
+
+        <fragment
+            android:id="@+id/fGameTableSeatNorth"
+            android:layout_gravity="center_horizontal"
+            android:name="es.etologic.mahjongscoring2.app.game.game_table.GameTableSeatFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/famGameTable"
@@ -64,14 +91,15 @@
         android:paddingRight="@dimen/half_standard_margin"
         android:paddingBottom="@dimen/half_standard_margin"
         android:src="@drawable/ic_add_white_24dp"
-        app:fab_colorNormal="@color/colorPrimary"
-        app:fab_colorPressed="@color/colorPrimaryDark"
-        app:fab_colorRipple="@color/colorPrimaryDark"
-        app:menu_animationDelayPerItem="20"
+        app:menu_backgroundColor="@color/white_transparency"
         app:menu_labels_colorNormal="@color/gray"
         app:menu_labels_colorRipple="@color/grayMM"
         app:menu_labels_ellipsize="end"
-        app:menu_labels_singleLine="true">
+        app:menu_labels_singleLine="true"
+        app:menu_colorNormal="@color/colorAccent"
+        app:menu_colorPressed="@color/colorAccentDark"
+        app:menu_colorRipple="@color/colorAccentDark"
+        app:menu_animationDelayPerItem="20">
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fabGameTablePenaltyCancel"
@@ -82,6 +110,7 @@
             app:fab_colorPressed="@color/redDark"
             app:fab_colorRipple="@color/redDark"
             app:fab_label="@string/cancel_penalty"
+            android:visibility="gone"
             app:fab_size="mini" />
 
         <com.github.clans.fab.FloatingActionButton
