--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorPrimaryTransparent">#8800B16A</color>
     <color name="colorPrimaryDarkTransparent">#88007B49</color>
     <color name="colorAccent">#ff4e95</color>
+    <color name="colorAccentDark">#A53161</color>
 
     <color name="whiteTransparent">#88FFFFFF</color>
 
